refactor; more i18n resources